--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name=".NewItemActivity"
             android:label="@string/title_activity_new_item"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ShoppingActivity"
+            android:label="@string/title_activity_shopping"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
